fixed alert not showing correctly

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1417,6 +1417,9 @@ html {
 .card-normal .card-title {
   margin-bottom: 0.75rem;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -1428,6 +1431,9 @@ html {
 }
 .right-3 {
   right: 0.75rem;
+}
+.right-1\/2 {
+  right: 50%;
 }
 .mx-auto {
   margin-left: auto;
@@ -1511,6 +1517,12 @@ html {
 .w-8 {
   width: 2rem;
 }
+.w-10 {
+  width: 2.5rem;
+}
+.w-2\/4 {
+  width: 50%;
+}
 .min-w-min {
   min-width: -webkit-min-content;
   min-width: -moz-min-content;
@@ -1527,6 +1539,10 @@ html {
 }
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+.translate-x-1\/2 {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .flex-col {
   flex-direction: column;
